fix: Ajuste-entidades