@@ -4,16 +4,15 @@ import com.jesustyle.application.entidade.pagamento.Items;
 import com.jesustyle.application.entidade.pagamento.PedidoDTO;
 import com.jesustyle.application.entidade.pagarme.Order;
 import com.jesustyle.application.entidade.transporte.solicitar.request.*;
+import com.jesustyle.application.repository.entity.PedidoEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
 
-
 @Service
 public class MapOrderToTransporte {
-    public TransporteRequest mapOrderToTransporteRequest(Order order, String referencia, PedidoDTO pedidoDto) {
-
+    public TransporteRequest mapOrderToTransporteRequest(PedidoEntity order, String referencia, PedidoDTO pedidoDto) {
 
         TransporteRequest transporteRequest = new TransporteRequest();
 
@@ -47,30 +46,36 @@ public class MapOrderToTransporte {
         destinatario.setNome(order.getCustomer().getName());
         destinatario.setCnpjCpf(order.getCustomer().getDocument());
 
-        String endereco = pedidoDto.getPayments().getFirst().getCredit_card().getCard().getBillingAddress().getLine_1();
-        String numero = pedidoDto.getPayments().getFirst().getCredit_card().getCard().getBillingAddress().getLine_1();
-        String complemento = pedidoDto.getPayments().getFirst().getCredit_card().getCard().getBillingAddress().getLine_1();
-        String bairro = pedidoDto.getPayments().getFirst().getCredit_card().getCard().getBillingAddress().getLine_1();
+        if (!pedidoDto.getPayments().isEmpty()) {
+            var payment = pedidoDto.getPayments().get(0).getCredit_card().getCard().getBillingAddress();
 
-        Endereco enderecoDestinatario = new Endereco(
-                !endereco.isEmpty() ? endereco : "",
-                !numero.isEmpty() ? numero : "0",
-                !complemento.isEmpty() ? numero : "N/A",
-                !bairro.isEmpty() ? numero : "",
-                pedidoDto.getPayments().getFirst().getCredit_card().getCard().getBillingAddress().getZipCode(),
-                pedidoDto.getPayments().getFirst().getCredit_card().getCard().getBillingAddress().getCity(),
-                pedidoDto.getPayments().getFirst().getCredit_card().getCard().getBillingAddress().getState());
+            String endereco = payment.getLine_1();
+            String numero = payment.getLine_1();
+            String complemento = payment.getLine_1();
+            String bairro = payment.getLine_1();
 
-        destinatario.setEndereco(enderecoDestinatario);
-        destinatario.setContato(order.getCustomer().getName());
-        destinatario.setEmail(order.getCustomer().getEmail());
-        destinatario.setTelefone(order.getCustomer().getPhones().getHome_phone().getArea_code() + order.getCustomer().getPhones().getHome_phone().getNumber());
-        destinatario.setCelular(order.getCustomer().getPhones().getHome_phone().getArea_code() + order.getCustomer().getPhones().getHome_phone().getNumber());
-        transporteRequest.setDestinatario(destinatario);
+            Endereco enderecoDestinatario = new Endereco(
+                    !endereco.isEmpty() ? endereco : "",
+                    !numero.isEmpty() ? numero : "0",
+                    !complemento.isEmpty() ? numero : "N/A",
+                    !bairro.isEmpty() ? numero : "",
+                    payment.getZipCode(),
+                    payment.getCity(),
+                    payment.getState()
+            );
+
+            destinatario.setEndereco(enderecoDestinatario);
+            destinatario.setContato(order.getCustomer().getName());
+            destinatario.setEmail(order.getCustomer().getEmail());
+            destinatario.setTelefone(order.getCustomer().getPhones().getHome_phone().getArea_code() + order.getCustomer().getPhones().getHome_phone().getNumber());
+            destinatario.setCelular(order.getCustomer().getPhones().getHome_phone().getArea_code() + order.getCustomer().getPhones().getHome_phone().getNumber());
+            transporteRequest.setDestinatario(destinatario);
+        }
 
         // Volumes (Baseado nos itens do pedido)
         List<Volume> volumes = new ArrayList<>();
-        var ii = order.getItems().getFirst();
+        if (!order.getItems().isEmpty()) {
+            var ii = order.getItems().get(0); // Change here
             Volume volume = new Volume();
             volume.setPeso(ii.getQuantity());
             volume.setAltura(1);
@@ -81,6 +86,7 @@ public class MapOrderToTransporte {
             volume.setValor(ii.getAmount() / 100.0);
             volume.setQuantidade(ii.getQuantity());
             volumes.add(volume);
+        }
 
         transporteRequest.setVolumes(volumes);
 
@@ -113,6 +119,7 @@ public class MapOrderToTransporte {
 
         return transporteRequest;
     }
+
     private double calculateTotalWeight(List<Items> items) {
         double totalWeight = 0;
         for (Items item : items) {
